# traderbot

./: .env.example  .gitignore  Makefile  README.md  botconfigs.example.yaml  desk.py  docker-compose.yaml  main.py  manual_swap.py  pyproject.toml
charts_tools/: generate_charts.py
report/: report_method.py
report/charts_tools/: CHARTS_README.md  __init__.py  generate_charts.py
scripts/: pre-commit.sh
tests/strategies/: test_random.py  test_strategy_composer.py  test_target_value.py
tests/trader/account/: test_account.py
tests/trader/api/jupiter/: test_jupiter_adapter.py  test_jupiter_private_api.py  test_jupiter_public_api.py
tests/trader/bot/: test_async_websocket_bot.py
tests/trader/models/: test_jupiter_data.py
tests/trader/notification/: test_notification_service.py
tests/trader/providers/jupiter/: test_async_jupiter_client.py  test_async_rpc_client.py  test_jupiter_adapter.py  test_jupiter_data.py  test_jupiter_private_api.py  test_jupiter_public_api.py
trader/: __init__.py  account.py  async_account.py  backtesting_bot.py  base_bot.py  bot.py  colored_logger.py  persistence.py  trading_strategy.py
trader/api/: __init__.py  base_api.py  fake_private_api.py  jupiter_adapter.py  jupiter_private_api.py  jupiter_public_api.py  private_api.py  public_api.py
trader/backtesting/: bot.py
trader/bot/: __init__.py  async_websocket_bot.py  backtest_bot.py  base_bot.py  bot.py  websocket_bot.py
trader/models/: __init__.py  account_data.py  bot_config.py  jupiter_data.py  log.py  mints.py  order.py  position.py  public_data.py
trader/notification/: __init__.py  notification_service.py
trader/persistence/: __init__.py  mongo.py
trader/providers/: __init__.py  base_api.py
trader/providers/jupiter/: async_jupiter_client.py  async_jupiter_svc.py  async_rpc_client.py  jupiter_adapter.py  jupiter_data.py  jupiter_public_api.py
trader/report/: __init__.py
trader/tests/: __init__.py  test_trading_strategies.py
trader/trading/: bot.py
